# ScarlettRpg

./: .gitignore  Actor.cpp  Actor.h  CMakeLists.txt  Game.cpp  Game.h  Input.cpp  Input.h  MapObject.cpp  MapObject.h  Player.cpp  Player.h  main.cpp  map.cpp  map.h  tile.cpp  tile.h  tile_type.cpp  tile_type.h  world.cpp  world.h
helpers/: constants.cpp  constants.h
renderers/: IRenderer.h
renderers/cli/: Render.cpp  Render.h
